--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
             <li><a href="/#/contact">Contact</a></li>
             <li><a href="/#/users">Users</a></li>
             <li><a href="/#/products">Products</a></li>
+            <li><a href="/#/sales">Sales</a></li>
           </ul>
         </div>
       </div>
