--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GE Sales</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <style>
+      a[ng-click]{
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
 
